FootyTablesContext with dependency injection was registered
Microsoft.AspNetCore.Identity.EntityFrameworkCore package was added

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ConnectionStr": "Connection String"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
