Modified funcionality to get teams

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionStr": "Connection String"
+    "ConnectionStr": "Data Source=DESKTOP-EHI5R08\\SQLEXPRESS;Initial Catalog=FootyTables;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
 
   "Logging": {
